# pumpclawn

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: README.md  package.json  tsconfig.json
apps/api/src/: server.ts
apps/web/: .env.local.example  README.md  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/base/: route.ts
apps/web/app/docs/: page.tsx
apps/web/app/mission/: page.tsx
apps/web/app/token/[mint]/: claim-buttons.tsx  page.tsx
apps/web/components/: split-table.tsx
apps/web/components/home/: launch-form.tsx  token-board.tsx
apps/web/components/proof/: panel.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  copy-button.tsx  stepper.tsx
apps/web/lib/: solana.ts
apps/web/public/docs/: solclaw.md
docs/: solclaw.md  ui-style-guide.md
openclaw/: README.md  openclaw.json
openclaw/workspace/: AGENTS.md  BOOTSTRAP.md  SOUL.md  TOOLS.md
programs/fee-router/: Anchor.toml  Cargo.toml  README.md
programs/fee-router/src/: lib.rs
scripts/: restart-solclawn.sh
