[package]
name = "fee-router"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.29.0"

[patch.crates-io]
blake3 = { path = "vendor/blake3-1.8.3" }
constant_time_eq = { path = "vendor/constant_time_eq-0.4.2" }
wit-bindgen = { path = "vendor/wit-bindgen-0.51.0" }
toml_datetime = { path = "vendor/toml_datetime-0.7.5+spec-1.1.0" }
toml_parser = { path = "vendor/toml_parser-1.0.6+spec-1.1.0" }
borsh = { path = "vendor/borsh-1.6.0" }
borsh-derive = { path = "vendor/borsh-derive-1.6.0" }
indexmap = { path = "vendor/indexmap-2.13.0" }
toml_edit = { path = "vendor/toml_edit-0.23.10+spec-1.0.0" }

[profile.release]
overflow-checks = true
